--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -42,11 +42,11 @@
 
 [[file:sec/img/doxygen-out6.png]]
 
-* Versions [3/4]
+* Versions [4/4]
 1. [X] Problem statement: deadline - <2021-10-28 qui>
 2. [X] Phase 1
 3. [X] Analysis phase: deadline
-4. [ ] Design phase: <2021-12-15 qua 23:00>
+4. [X] Design phase: <2021-12-15 qua 23:00>
 
 * Notes                                                           :Important:
   :PROPERTIES:
@@ -370,21 +370,21 @@ Design Phase must include (some specifications may vary according to your projec
      - Custom PCB for ultrasonic sensors + fragrance diffuser actuator
    - [X] Tools
      - PADS, KiCad
-2) *Software Specification* [2/11]:
+2) *Software Specification* [6/11]:
    - [ ] Entity Relations Diagram
-   - [-] Classes Diagram
+   - [X] Classes Diagram
      - [X] Remote Client
-     - [ ] Remote Server
-     - [ ] Local System
+     - [X] Remote Server
+     - [X] Local System
    - [ ] Data Formats
    - [ ] Flowcharts
    - [ ] Tasks Division (accurate plan)
    - [ ] Thread Priorities
    - [X] GUI Layouts
    - [X] Test Cases
-   - [ ] Software COTs
-   - [ ] Third-party Libraries/apps
-   - [ ] Tools
+   - [X] Software COTs
+   - [X] Third-party Libraries/apps
+   - [X] Tools
 
 It is compulsory to show/identify which/where all class topics are going to be implemented and used by you! Also third-party Libraries/apps must be identified so you can use other's software and materials with our consent. 
 
@@ -4581,6 +4581,10 @@ e01 |o..o{ e03
 
 @enduml
   #+END_SRC
+
+  #+RESULTS:
+  [[file:diags/plantuml/erd/output/complete-example.png]]
+
 **** Plantuml to MySQL
 [[https://github.com/grafov/plantuml2mysql][src]]
 
