--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -4633,6 +4633,54 @@ A line starting with .. or __, used as a separator into a class definition, will
 
 The HTML markup in comments (after --) is stripped.
 
+*** Flowcharts (activity diagram)
+
+**** Conditionals
+  #+BEGIN_SRC plantuml :file diags/plantuml/flowchart/output/cond.png
+    start      
+  '' style 1        
+    if (Graphviz installed?) then (yes)      
+      :process all\ndiagrams;      
+    else (no)      
+      :process only      
+      __sequence__ and __activity__ diagrams;      
+    endif      
+    
+  '' style 2
+    if (color?) is (<color:red>red) then      
+    :print red;      
+    else       
+    :print not red;      
+
+  '' style 3
+    if (counter?) equals (5) then      
+    :print 5;      
+    else       
+    :print not 5;      
+
+'' Elseif
+    if (condition A) then (yes)      
+      :Text 1;      
+    elseif (condition B) then (yes)      
+      :Text 2;      
+      stop      
+    (no) elseif (condition C) then (yes)      
+      :Text 3;      
+    (no) elseif (condition D) then (yes)      
+      :Text 4;      
+    else (nothing)      
+      :Text else;      
+    endif      
+          
+    stop      
+          
+    @enduml      
+  #+END_SRC
+
+  #+RESULTS:
+  [[file:diags/plantuml/flowchart/output/cond.png]]
+
+
 * Gesture recognition                                              :noexport:
 ** Research [0/7]
 1) [ ] [[https://techvidvan.com/tutorials/hand-gesture-recognition-tensorflow-opencv/][Real-time Hand Gesture Recognition using TensorFlow & OpenCV]]
