ADD: DESIGN: SW-spec - DB design w/ ERD

--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -4692,7 +4692,7 @@ entity "MediaFile" as MF{
   *filename : text
   *filesize : text
   *filetype : text
-  *data : blob
+  *mdata : blob
   description : text
 }
 
