--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -192,4 +192,5 @@
 \newacronym{poe}{PoE}{Power over Ethernet}
 \newacronym{ma}{mA}{milliampere}
 \newacronym{ttl}{TTL}{Transistor-Transistor Logic}
+\newacronym{lcd}{LCD}{Liquid Crystal Display}
 % ========================== END ======================
